[gd_scene load_steps=4 format=3 uid="uid://dqlxsru7t4vik"]

[ext_resource type="Script" path="res://UI/level_menu.gd" id="1_gnlkx"]

[sub_resource type="Gradient" id="Gradient_5dh8p"]
offsets = PackedFloat32Array(0.996785)
colors = PackedColorArray(0.168627, 0.211765, 0.266667, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_lk2e7"]
gradient = SubResource("Gradient_5dh8p")

[node name="LevelMenu" type="TextureRect"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_lk2e7")
script = ExtResource("1_gnlkx")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 100
theme_override_constants/margin_top = 100
theme_override_constants/margin_right = 100
theme_override_constants/margin_bottom = 100

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 50

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 45
text = "Selecciona un Nivel"

[node name="MainMenuButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 4
theme_override_font_sizes/font_size = 25
text = "Regresar"

[node name="LevelContainer" type="GridContainer" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/h_separation = 100
theme_override_constants/v_separation = 25
columns = 2

[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
